# yolo-flutter-app

./: .gitignore  .pubignore  AGENTS.md  CHANGELOG.md  CHANGELOG_DRAFT.md  CLAUDE.md  COORDINATE_ISSUE.md  COORDINATE_ISSUE_FINAL.md  COORDINATE_ISSUE_UPDATE.md  DOCUMENTATION_STRATEGY.md  PROGRESS.md  README.md  README.zh-CN.md  STACK_OVERFLOW_FIX_SUMMARY.md  STRATEGY.md  TESTING_GUIDE.md  YOLO_INSTANCE_ID_IMPLEMENTATION.md  YOLO_STREAMING_ENHANCEMENT_PLAN.md  analysis_options.yaml  build.gradle  codecov.yml  gradle.properties  pubspec.yaml  test_pose_fix.md
android/src/main/cpp/: CMakeLists.txt  depth-colorizer.h  native-lib.cpp  rect.h  tflite_detect.cpp  tflite_segment.cpp  types.hpp  ultralytics.h
android/src/main/cpp/opencv-mobile-4.6.0-android/sdk/native/jni/include/opencv2/: core.hpp  cvconfig.h  features2d.hpp  highgui.hpp  imgproc.hpp  opencv.hpp  opencv_modules.hpp  photo.hpp  video.hpp
android/src/main/cpp/opencv-mobile-4.6.0-android/sdk/native/jni/include/opencv2/core/: affine.hpp  async.hpp  base.hpp  bindings_utils.hpp  bufferpool.hpp  check.hpp  core.hpp  core_c.h  cuda.hpp  cuda.inl.hpp  cuda_stream_accessor.hpp  cuda_types.hpp  cv_cpu_dispatch.h  cv_cpu_helper.h  cvdef.h  cvstd.hpp  cvstd.inl.hpp  cvstd_wrapper.hpp  directx.hpp  dualquaternion.hpp  dualquaternion.inl.hpp  eigen.hpp  fast_math.hpp  mat.hpp  mat.inl.hpp  matx.hpp  neon_utils.hpp  ocl.hpp  ocl_genbase.hpp  opengl.hpp  operations.hpp  optim.hpp  ovx.hpp  persistence.hpp  quaternion.hpp  quaternion.inl.hpp  saturate.hpp  simd_intrinsics.hpp  softfloat.hpp  sse_utils.hpp  (+7 more)
android/src/main/cpp/opencv-mobile-4.6.0-android/sdk/native/jni/include/opencv2/core/cuda/: border_interpolate.hpp  color.hpp  common.hpp  datamov_utils.hpp  dynamic_smem.hpp  emulation.hpp  filters.hpp  funcattrib.hpp  functional.hpp  limits.hpp  reduce.hpp  saturate_cast.hpp  scan.hpp  simd_functions.hpp  transform.hpp  type_traits.hpp  utility.hpp  (+6 more)
android/src/main/cpp/opencv-mobile-4.6.0-android/sdk/native/jni/include/opencv2/features2d/: features2d.hpp
android/src/main/cpp/opencv-mobile-4.6.0-android/sdk/native/jni/include/opencv2/highgui/: highgui.hpp
android/src/main/cpp/opencv-mobile-4.6.0-android/sdk/native/jni/include/opencv2/imgproc/: bindings.hpp  imgproc.hpp  imgproc_c.h  segmentation.hpp  types_c.h
android/src/main/cpp/opencv-mobile-4.6.0-android/sdk/native/jni/include/opencv2/photo/: cuda.hpp  photo.hpp
android/src/main/cpp/opencv-mobile-4.6.0-android/sdk/native/jni/include/opencv2/video/: background_segm.hpp  tracking.hpp  video.hpp
(+714 files in other folders)
